@@ -1,5 +1,6 @@
 Post-v21.03.0
 -------------------------
+  - Introduce ovn-controller incremetal processing engine statistics
 
 OVN v21.03.0 - 5 Mar 2020
 -------------------------
